--- a/templates/base2.html
+++ b/templates/base2.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="en">
   <head>
+    
     <style>
         .nav5{
             background-color: darkcyan;
@@ -61,13 +62,12 @@
   <body>
     <ul class="nav5">
         <li class="webname">Web Parking</li>
+        <li><a class="anc1" style="text-decoration: none; color: white;" href="viewslot">Book Slot</a></li>
+        <!-- <li><a class="anc1" style="text-decoration: none; color: white;" href="bookslot">Book Slot</a></li> -->
 
-        <li><a class="anc1" style="text-decoration: none; color: white;" href="home">Home</a></li>
-        <li><a class="anc1" style="text-decoration: none; color: white;" href="about">About</a></li>
+        <li><a class="anc1" style="text-decoration: none; color: white;" href="logout">Logout</a></li>
 
-        <li><a class="anc1" style="text-decoration: none; color: white;" href="register">Register</a></li>
-
-        <li><a class="anc1" style="text-decoration: none; color: white;" href="login">Login</a></li>
+        <!-- <li><a class="anc1" style="text-decoration: none; color: white;" href="login">Login</a></li> -->
 
         <!-- <li><a class="anc1" style="text-decoration: none; color: white;" href="adminlogin">AdminLogin</a></li> -->
 
@@ -92,68 +92,3 @@
 
 
 
-<!-- <!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <style>
-        .nav1{
-            background-color: darkcyan;
-            text-align: center;
-            position: sticky;
-            padding: 12px;
-            top: 0px;
-            width: 100%;
-            margin-top:0rem;
-        }
-        li{
-            display: inline-block;
-            padding: 20px;
-            text-decoration: none;
-        }
-        a{
-            text-decoration: none;
-            font-size: 20px;
-            color: aliceblue;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            
-        }
-        a:hover{
-            color: black;
-        }
-        footer {
-            background-color: darkcyan;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            /* position: relative; */
-            /* position: absolute; */
-            position: fixed;
-            bottom: 0px;
-            width: 100%;
-        }
-    </style>
-    <title>Document</title>
-</head>
-<body>
-    
-    <ul class="nav1">
-        <li><a href="home">Home</a></li>
-        <li><a href="about">About</a></li>
-
-        <li><a href="register">Register</a></li>
-
-        <li><a href="login">Login</a></li>
-
-    </ul><br>
-   
-   
-    
-    <footer>
-        <p>&copy; 2023 Web Parking | Contact: webparking@parking.com</p>
-    </footer>
-
-    
-    
-</body>
-</html> -->
