--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
         width: 100%;
     }
 </style>
-<body style="background-image: url({% static 'images/parkingcar.jpg' %});">
+<body style="background-image: url({% static 'images/parkingcar.jpg' %});"></body>
 
 {% endblock %}
 
