--- a/templates/register.html
+++ b/templates/register.html
@@ -23,11 +23,7 @@
 <div class="container">
 <form action="registering" method="post">
     {% csrf_token %}
-    <div class="form-group">
-      <label for="exampleInputEmail1">UserId</label>
-      <input name="userid" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-      <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-    </div>
+    
     <div class="form-group">
       <label for="exampleInputPassword1">Name</label>
       <input name="name" type="text" class="form-control" id="exampleInputPassword1" required>
@@ -53,6 +49,10 @@
         <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
       </div>
     <button type="submit" class="btn btn-info">Register</button>
+  </form><br>
+  <form action="login" method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-info">Login</button>
   </form>
 </div>
     <!-- <div class="container">
