--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,7 @@
         <li><a class="anc1" style="text-decoration: none; color: white;" href="register">Register</a></li>
 
         <li><a class="anc1" style="text-decoration: none; color: white;" href="login">Login</a></li>
+        <li><a class="anc1" style="text-decoration: none; color: white;" href="#">Contact us2</a></li>
 
         <!-- <li><a class="anc1" style="text-decoration: none; color: white;" href="adminlogin">AdminLogin</a></li> -->
 
